<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>dev.szydmc</groupId>
  <artifactId>szydmc-chat-bridge</artifactId>
  <version>1.1.4</version>
  <properties>
    <maven.compiler.release>8</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <repositories>
    <repository><id>spigotmc-snapshots</id><url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url></repository>
  </repositories>
  <dependencies>
    <dependency><groupId>org.spigotmc</groupId><artifactId>spigot-api</artifactId><version>1.13.2-R0.1-SNAPSHOT</version><scope>provided</scope></dependency>
    <dependency><groupId>com.google.code.gson</groupId><artifactId>gson</artifactId><version>2.13.2</version></dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><version>3.14.0</version><configuration><release>8</release></configuration></plugin>
      <plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-shade-plugin</artifactId><version>3.6.1</version><executions><execution><phase>package</phase><goals><goal>shade</goal></goals><configuration><createDependencyReducedPom>false</createDependencyReducedPom><relocations><relocation><pattern>com.google.gson</pattern><shadedPattern>dev.szydmc.chatbridge.libs.gson</shadedPattern></relocation></relocations></configuration></execution></executions></plugin>
    </plugins>
  </build>
</project>
